# mini-s3

./: .env.example  .gitignore  Cargo.toml  README.md  database.db  database.db-shm  database.db-wal  downloaded.txt  zenn.md
docs/: architect.md  directory-structure.md  er.md
migrations/: 20260329060455_init_tables.down.sql  20260329060455_init_tables.up.sql
src/: main.rs
src/application/: buckets.rs  mod.rs  objects.rs  ports.rs
src/domain/: bucket.rs  error.rs  etag.rs  mod.rs  object.rs
src/http/: error.rs  mod.rs  routes.rs  state.rs
src/http/handlers/: buckets.rs  objects.rs
src/infrastructure/: database.rs
src/infrastructure/persistence/: mod.rs  sqlite_buckets.rs  sqlite_objects.rs
